--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             position: absolute;
             z-index: 40; /* Below disc, but above bottom jaw */
             width: 120%;
-            height: 64px; /* Original height */
-            bottom: 50%; /* Adjusted for original height */
+            height: 300px; /* INCREASED HEIGHT TO MASK DISC */
+            bottom: 50%; 
             background-color: #1a1a1a;
             border-bottom: 1px solid #000;
             box-shadow: 0 -10px 15px rgba(0,0,0,0.3);
